verif/test/deca/context/invalid/bad-condition-verif.res
src/test/deca/context/invalid/bad-condition.deca:11:8: 'x' does not exist in current context of expressions
